# screenshot_hero

./: .cursorignore  .gitignore  .ignore  AGENTS.MD  Cargo.toml  LICENSE  README.md  build.rs  com.screenshot_hero.ScreenshotHero.yml
.agents/: .skill-lock.json  .skill-lock.json.backup
.specs/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
data/: com.screenshot_hero.ScreenshotHero.desktop  com.screenshot_hero.ScreenshotHero.gresource.xml  com.screenshot_hero.ScreenshotHero.gschema.xml  dev.codethings.schero.desktop  dev.codethings.schero.gresource.xml  dev.codethings.schero.gschema.xml  dev.codethings.schero.metainfo.xml  gschemas.compiled  screenshot-hero.desktop
docs/: flathub-submission-checklist.md
docs/architecture/: ADR-001-system-architecture.md  ADR-002-annotation-model.md  ADR-003-canvas-rendering.md  ADR-004-project-file-format.md  ADR-005-undo-redo.md
docs/pocs/: POC-001-Screenshot-Portal.md
docs/product/: PRD-001-screenshot-capture-and-loading.md  PRD-002-canvas-and-navigation.md  PRD-003-annotations.md  PRD-004-project-management.md  PRD-005-export-and-clipboard.md  PRD-006-settings-and-preferences.md
docs/research/: POC-002-GTK-Image-Loading.md  POC-003-01-flatpak.md  (+4 more)
flatpak/: cargo-sources.json  com.screenshot_hero.ScreenshotHero.yml  dev.codethings.schero.flathub.yml  dev.codethings.schero.yml
package/: build-package.sh  dev.codethings.schero.desktop  install.sh  uninstall.sh
src/: application.rs  lib.rs  main.rs  resources.rs
(+59 files in other folders)
