[package]
name = "screenshot-hero"
version = "0.1.0"
edition = "2021"
description = "Linux-native screenshot annotation application"
license = "MIT"

[[bin]]
name = "screenshot-hero"
path = "src/main.rs"

[dependencies]
ashpd = "0.9"
env_logger = "0.11"
gdk-pixbuf = "0.19"
gtk = { package = "gtk4", version = "0.9" }
libadwaita = "0.7"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
